logs/offboard_pkg/build.make.083.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:99:44: error: cannot convert ‘geometry_msgs::Quaternion’ {aka ‘geometry_msgs::Quaternion_<std::allocator<void> >’} to ‘tf::Quaternion&’
   99 |             uav[nVehicle-1].get_att(yaw_d, q_init);
      |                                            ^~~~~~
      |                                            |
      |                                            geometry_msgs::Quaternion {aka geometry_msgs::Quaternion_<std::allocator<void> >}
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:49: note:   initializing argument 2 of ‘void TaskManager::get_att(double&, tf::Quaternion&)’
   70 |     void get_att(double &yaw_d, tf::Quaternion &q);
      |                                 ~~~~~~~~~~~~~~~~^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:102:35: error: cannot convert ‘geometry_msgs::Quaternion’ {aka ‘geometry_msgs::Quaternion_<std::allocator<void> >’} to ‘tf::Quaternion&’
  102 |             uav[0].get_att(yaw_d, q_init);
      |                                   ^~~~~~
      |                                   |
      |                                   geometry_msgs::Quaternion {aka geometry_msgs::Quaternion_<std::allocator<void> >}
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:49: note:   initializing argument 2 of ‘void TaskManager::get_att(double&, tf::Quaternion&)’
   70 |     void get_att(double &yaw_d, tf::Quaternion &q);
      |                                 ~~~~~~~~~~~~~~~~^
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:54:6: error: no declaration matches ‘void TaskManager::get_att(double&, geometry_msgs::Quaternion&)’
   54 | void TaskManager::get_att(double &yaw_d, geometry_msgs::Quaternion &q)
      |      ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:10: note: candidate is: ‘void TaskManager::get_att(double&, tf::Quaternion&)’
   70 |     void get_att(double &yaw_d, tf::Quaternion &q);
      |          ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: ‘class TaskManager’ defined here
   15 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
